// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`nx-plugin > should NOT add targets when plugin is not registered 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "implicitDependencies": [],
  "name": "my-lib",
  "projectType": "library",
  "root": "libs/my-lib",
  "sourceRoot": "libs/my-lib/src",
  "tags": [
    "scope:plugin",
  ],
  "targets": {},
}
`;

exports[`nx-plugin > should NOT config targets to configured project when plugin is registered 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "implicitDependencies": [],
  "name": "my-lib",
  "projectType": "library",
  "root": "libs/my-lib",
  "sourceRoot": "libs/my-lib/src",
  "tags": [
    "scope:plugin",
  ],
  "targets": {},
}
`;

exports[`nx-plugin > should add config targets to empty project when plugin is registered 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "implicitDependencies": [],
  "name": "my-lib",
  "projectType": "library",
  "root": "libs/my-lib",
  "sourceRoot": "libs/my-lib/src",
  "tags": [
    "scope:plugin",
  ],
  "targets": {
    "code-pushup--configuration": {
      "configurations": {},
      "executor": "nx:run-commands",
      "options": {
        "command": "nx g @code-pushup/nx-plugin:configuration --project=my-lib",
      },
    },
  },
}
`;

exports[`nx-plugin > should execute configuration 1`] = `
"import type { CoreConfig } from '@code-pushup/models';

// see: https://github.com/code-pushup/cli/blob/main/packages/models/docs/models-reference.md#coreconfig
export default {
  plugins: [],
} satisfies CoreConfig;
"
`;
